# aws-cppwrapper-lattigo

./: .gitignore  CHANGES.md  CMakeLists.txt  INCORPORATING.md  README.md  VERSIONING.md
cmake/: download-external-project.cmake
cmake/modules/: FindLattigoLib.cmake
codebuild/: build_ci_images.sh  buildspec.yml  ci_build.sh  ci_ubuntu-20.04_clang-10.docker  ubuntu-20.04_base.docker
examples/: CMakeLists.txt  README.md  bootstrapping.cpp  euler.cpp  multikey.cpp  sigmoid.cpp
src/: CMakeLists.txt
src/gowrapper/: CMakeLists.txt  go.mod  latticppMain.go
src/gowrapper/ckks/: bootstrap.go  bootstrap_params.go  ciphertext.go  dckks.go  decryptor.go  encoder.go  encryptor.go  evaluator.go  keygen.go  marshaler.go  params.go  plaintext.go  precision.go
src/gowrapper/marshal/: storage.go
src/gowrapper/marshall/: storage.go
src/gowrapper/ring/: ring.go
src/gowrapper/utils/: utils.go
src/latticpp/: CMakeLists.txt  latticpp.h
src/latticpp/ckks/: CMakeLists.txt  bootstrap.cpp  bootstrap.h  bootstrap_params.cpp  bootstrap_params.h  ciphertext.cpp  ciphertext.h  dckks.cpp  dckks.h  decryptor.cpp  decryptor.h  encoder.cpp  encoder.h  encryptor.cpp  encryptor.h  evaluator.cpp  evaluator.h  keygen.cpp  keygen.h  marshaler.cpp  marshaler.h  params.cpp  params.h  plaintext.cpp  plaintext.h  precision.cpp  precision.h
src/latticpp/marshal/: gohandle.h
src/latticpp/marshall/: gohandle.h
src/latticpp/ring/: CMakeLists.txt  ring.cpp  ring.h
src/latticpp/utils/: CMakeLists.txt  utils.cpp  utils.h
